    <resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Calculator</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="notfinished">Unfortunatelly, app is not finished</string>

    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="undo">undo</string>
    <string name="point">.</string>
    <string name="add">+</string>
    <string name="mns">-</string>
    <string name="multshow">*</string>
    <string name="mult">*</string>
    <string name="dev">/</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="sqrt">sqrt</string>
    <string name="sqrtshow">\u221AX</string>
    <string name="sqr">^(2)</string>
    <string name="sqrshow">x\u00B2</string>
    <string name="pow">^</string>
    <string name="pishow">\u03c0</string>
    <string name="eshow">e</string>
    <string name="openbracket">(</string>
    <string name="closebracket">)</string>
    <string name="mod">%</string>
    <string name="modshow">mod</string>
    <string name="calc">=</string>
    <string name="todegree">(3.141592653589793/180)*</string>



</resources>
