<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/RelLayoutSimple"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="0dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="0dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guidelineTop"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="100dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guidelineBottom"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="0dp" />

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/_1"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/buttonPoint"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/button4"></Button>

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif"
                android:text="@string/_2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button0"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif"
                android:text="@string/_3"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/buttonCALC"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/button6" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/_4"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button1"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/button7" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif"
                android:text="@string/_5"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toStartOf="@+id/button6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toBottomOf="@+id/button8" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif"
                android:text="@string/_6"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:layout_constraintTop_toBottomOf="@+id/button9" />

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif"
                android:text="@string/_7"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/button8"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif"
                android:text="@string/_8"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toStartOf="@+id/button9"
                app:layout_constraintStart_toEndOf="@+id/button7"
                app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif"
                android:text="@string/_9"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button6"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toEndOf="@+id/button8"
                app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif"
                android:text="@string/_0"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/buttonCALC"
                app:layout_constraintStart_toEndOf="@+id/buttonPoint"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Button
                android:id="@+id/buttonPoint"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/point"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/button0"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/button1" />

            <Button
                android:id="@+id/buttonCALC"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:fontFamily="sans-serif"
                android:onClick="ifButtonCalcPressed"
                android:text="@string/calc"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toEndOf="@+id/button0"
                app:layout_constraintTop_toBottomOf="@+id/button3" />

            <Spinner
                android:id="@+id/spinner_to"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/items"
                android:gravity="end"
                android:popupBackground="@color/myGreenColor"
                android:spinnerMode="dropdown"
                android:textAlignment="center"
                android:scrollbarStyle="insideOverlay"
                app:layout_constraintBottom_toTopOf="@+id/button8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_what"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/items"
                android:gravity="bottom"
                android:popupBackground="@color/myGreenColor"
                android:spinnerMode="dropdown"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button8"
                app:layout_constraintEnd_toStartOf="@+id/spinner_to"
                app:layout_constraintStart_toEndOf="@+id/spinner_what"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_media_play" />


        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>